--- a/17.Workshop/styles.css
+++ b/17.Workshop/styles.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     height: 93vh;
     margin: 0;
+    overflow: hidden;
 }
 
 #game-start {
@@ -37,7 +38,7 @@ body {
 }
 
 #wizard {
-    z-index: 100;
+    z-index: 50;
     position: absolute;
     width: 82px;
     height: 100px;
@@ -79,10 +80,11 @@ body {
     position: absolute;
     width: 50%;
     background-color: red;
-    top: 100px;
+    top: 300px;
     left: 25%;
-    z-index: 1;
+    z-index: 100;
     text-align: center;
     padding: 20px;
+    border-radius: 30px;
 }
 
